fix nav invisible in mobile phone; fix sidebar hidden by nav in iPad; tweak dev server host config to allow phone access;

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -24,6 +24,17 @@
     top: 0px;
 }
 
+/* 解决手机屏幕和iPad屏幕中，sidebar被nav栏遮挡的问题 */
+:root .VPLocalNav {
+    padding-top: var(--vp-nav-height, 0px);
+}
+
+/* 解决手机屏幕无法展开收起的nav栏 */
+:root .VPNavScreen {
+    z-index: 999;
+    height: 100vh;
+}
+
 :root {
     --vp-c-brand: rgb(135, 85, 244);
     --vp-c-brand-dark: rgb(161, 124, 243);
